--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "karma": "^0.12.9",
     "karma-coffee-preprocessor": "^0.2.1",
     "karma-firefox-launcher": "^0.1.3",
-    "karma-jasmine": "^0.1.5",
-    "should": "^4.3.0"
+    "karma-jasmine": "^0.1.5"
   }
 }
