--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,11 @@
     "bootstrap": "~3.1",
     "angular-bootstrap": "~0.10.0",
     "angular-ui-router": "~0.2",
-    "lodash": "*"
+    "lodash": "*",
+    "angular-animate": "~1.3.14"
   },
   "dependencies": {},
   "resolutions": {
-    "angular": "~1.3"
+    "angular": "1.3.14"
   }
 }
